JPA Delete Beer by ID